// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlannerItems /> should have a "My Awesome Planner Note" note on our mock data: without hover 1`] = `
.c0 {
  list-style-type: none;
}

.c0:last-child {
  margin-bottom: 16px;
}

.c0 > button {
  cursor: pointer;
}

.c5 {
  padding-right: 16px;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  text-align: left;
}

.c6 {
  color: #423E3C;
  margin: 0;
  font-weight: normal;
}

.c2 {
  width: 100%;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
  border-radius: 8px;
  -webkit-transition: all 150ms ease-in-out 0s;
  transition: all 150ms ease-in-out 0s;
  padding: 12px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 svg,
.c2 img {
  height: 3rem;
  font-size: 2.4rem;
  width: 3rem !important;
}

.c2 svg + .c4,
.c2 img + .c4 {
  padding-left: 1.5rem;
}

.c2 .warning-icon {
  font-size: 14px;
  width: 14px !important;
  margin-top: -10px;
  margin-left: 5px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
}

.c1 .MuiCheckbox-root {
  width: 48px;
  height: 48px;
  font-size: 1.8rem;
  margin-right: 5px;
}

.c1 .c4 {
  padding-right: 0;
}

.c7 {
  color: #7B746F;
  font-size: 1.4rem;
  line-height: 1.6rem;
}

.c3 {
  line-height: 1.4rem;
  text-align: center;
  padding: 0 16px 0 0;
  color: #D73F09;
  width: 5.8rem;
}

.c3 strong {
  line-height: 2.0rem;
  font-size: 2.0rem;
}

.c8 {
  background: #E9E5E4;
  border-radius: 4px;
  color: #2E2B2A;
  font-size: 1.2rem;
  padding: 2px 4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 4px;
  text-align: center;
  white-space: nowrap;
}

@media (min-width:768px) {

}

<li
  class="c0 c1"
>
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="course-list-item-header"
    >
      <div>
        WR
      </div>
      <div>
        <strong>
          214
        </strong>
      </div>
    </div>
    <div
      class="c4 c5"
    >
      <h4
        class="c6"
      >
        My Awesome Planner Note
      </h4>
      <div
        class="c7"
      >
        Due Jan 1st at 1:01 AM
      </div>
    </div>
    <span
      class="c8"
    >
      discussion topic
    </span>
  </div>
</li>
`;

exports[`<PlannerItems /> should have a "Week 5 Lab Discussion" assignment on our mock data: with hover 1`] = `
.c5 {
  color: #D73F09;
  background-color: transparent;
}

.c0 {
  list-style-type: none;
}

.c0:last-child {
  margin-bottom: 16px;
}

.c0 > button {
  cursor: pointer;
}

.c7 {
  padding-right: 16px;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  text-align: left;
}

.c9 {
  color: #423E3C;
  margin: 0;
  font-weight: normal;
}

.c3 {
  width: 100%;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
  border-radius: 8px;
  -webkit-transition: all 150ms ease-in-out 0s;
  transition: all 150ms ease-in-out 0s;
  padding: 12px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 svg,
.c3 img {
  height: 3rem;
  font-size: 2.4rem;
  width: 3rem !important;
}

.c3 svg + .c6,
.c3 img + .c6 {
  padding-left: 1.5rem;
}

.c3 .warning-icon {
  font-size: 14px;
  width: 14px !important;
  margin-top: -10px;
  margin-left: 5px;
}

.c4 {
  color: #423E3C;
  cursor: pointer;
}

.c4:hover {
  border: 1px solid transparent;
}

.c4:hover .c8,
.c4:hover .List__ListItemContentLinkName-sc-1h14hxl-4 {
  color: #D73F09;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
}

.c1 .MuiCheckbox-root {
  width: 48px;
  height: 48px;
  font-size: 1.8rem;
  margin-right: 5px;
}

.c1 .c6 {
  padding-right: 0;
}

.c1:hover {
  box-shadow: rgba(66,62,60,0.1) 0px 10px 16px,rgba(105,99,97,0.05) 0px 3px 16px;
  -webkit-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
  border-color: transparent;
}

.c1:hover .c8,
.c1:hover .c2 {
  color: #D73F09;
}

.c10 {
  color: #7B746F;
  font-size: 1.4rem;
  line-height: 1.6rem;
}

.c11 {
  background: #E9E5E4;
  border-radius: 4px;
  color: #2E2B2A;
  font-size: 1.2rem;
  padding: 2px 4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 4px;
  text-align: center;
  white-space: nowrap;
}

@media (min-width:768px) {

}

<li
  class="c0 c1"
>
  <a
    class="c2 c3 c4"
    href="https://canvas.oregonstate.edu/courses/1724943/assignments/7547409/submissions/6227907"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-file-edit fa-w-12 c5"
      color="#D73F09"
      data-icon="file-edit"
      data-prefix="fal"
      data-testid="planner-icon"
      focusable="false"
      role="img"
      viewBox="0 0 384 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M369.9 97.9L286 14C277 5 264.8-.1 252.1-.1H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V131.9c0-12.7-5.1-25-14.1-34zm-22.6 22.7c2.1 2.1 3.5 4.6 4.2 7.4H256V32.5c2.8.7 5.3 2.1 7.4 4.2l83.9 83.9zM336 480H48c-8.8 0-16-7.2-16-16V48c0-8.8 7.2-16 16-16h176v104c0 13.3 10.7 24 24 24h104v304c0 8.8-7.2 16-16 16zM219.2 247.2l29.6 29.6c1.8 1.8 1.8 4.6 0 6.4L136.4 395.6l-30.1 4.3c-5.9.8-11-4.2-10.2-10.2l4.3-30.1 112.4-112.4c1.8-1.8 4.6-1.8 6.4 0zm64.4 1.2l-16.4 16.4c-1.8 1.8-4.6 1.8-6.4 0l-29.6-29.6c-1.8-1.8-1.8-4.6 0-6.4l16.4-16.4c5.9-5.9 15.4-5.9 21.2 0l14.8 14.8c5.9 5.8 5.9 15.3 0 21.2z"
        fill="currentColor"
      />
    </svg>
    <div
      class="c6 c7"
    >
      <h4
        class="c8 c9"
      >
        Week 5 Lab Discussion
      </h4>
      <div
        class="c10"
      >
        Due May 2nd at 6:59 AM
      </div>
    </div>
    <span
      class="c11"
    >
      discussion topic
    </span>
  </a>
</li>
`;
